<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_background"
    android:orientation="horizontal"
    tools:context=".activity_recorrido">

    <FrameLayout
        android:id="@+id/camera_view"
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:background="@color/fondo_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <ImageView
            android:id="@+id/img_camara"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/img_camara"
            app:srcCompat="@drawable/camara" />
    </FrameLayout>

    <ProgressBar
        android:id="@+id/progreso_recorrido"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="264dp"
        android:layout_marginLeft="264dp"
        android:max="100"
        android:progress="50"
        app:layout_constraintBottom_toTopOf="@+id/camera_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.129" />

    <TextView
        android:id="@+id/txt_zonas_restantes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/zonas_restantes"
        android:textColor="@color/letra_negra"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/camera_view"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_porcentaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/porcentaje"
        android:textColor="@color/letra_negra"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/camera_view"
        app:layout_constraintStart_toEndOf="@+id/txt_zonas_restantes"
        app:layout_constraintTop_toBottomOf="@+id/progreso_recorrido"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt_zona_actual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_zona_actual"
        android:textColor="@color/letra_negra"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/progreso_recorrido"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_lugares_restantes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:text="@string/Lugares_restantes"
        android:textColor="@color/letra_negra"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/progreso_recorrido"
        app:layout_constraintTop_toBottomOf="@+id/txt_zona_actual" />

</androidx.constraintlayout.widget.ConstraintLayout>